...
            Text("Passcode")
            Spacer()
            let picker = Picker("", selection: $viewModel.pinEnabled) {
                ForEach([true, false], id: \.self) { option in
                    Text(option ? String(localized: "Enabled") : String(localized: "Disabled"))
                        .tag(option)
                        .accessibilityIdentifier(option ? "passcode-enable" : "passcode-disable")
                }
            }
            .accessibilityIdentifier("passcode-picker")
#if os(tvOS)
            Menu {
                picker
            } label: {
                HStack(spacing: 8) {
                    Text(viewModel.pinEnabled ? String(localized: "Enabled") : String(localized: "Disabled"))
...
